<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="Examen de Admision 2024"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Formulario de registro"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Apellidos y Nombres"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Correo"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Clave"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Fecha de Nacimiento"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Carrera"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="217dp"
        android:layout_height="188dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_is" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_ia" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_im" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_ad" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="¿Por qué medio se enteró de la convocatoria?"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/checkbox_radio"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="556dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/checkbox_internet"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="586dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/checkbox_amigo"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="616dp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/checkbox_publicidad"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="646dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="675dp" />

</androidx.constraintlayout.widget.ConstraintLayout>